2006-09-11 Tim
 RFE: [ 1552813 ] Web: Mark developers active/inactive
  Web\developer: developers.xml index.php

2006-09-10 Tim
 PATCH: [ 1555810 ] Bulgarian translation status/translator update
  Web\developer\l10n: status.xml

2006-09-05 Tim
 BUG: [ 1552149 ] Web: CVS link in sidebar
  Web: links.php page.inc
  Web\developer: index.php
  Web\developer\l10n: instructions.php

2006-09-04 Tim
 PATCH: [ 1552144 ] Web: Fixes to developers-needed -page
  Web\developer: needed.php
 Remove download links to old stable versions.
  Web: index.php

2006-09-03 Tim
 PATCH: [ 1551217 ] Web: Tracker shortcuts
  Web: .htaccess

2006-09-02 Tim
 Fix the download link of the HTML manual.
  Web: index.php
 Use Dean's text changes for 2.4 subdirectory too.
  Web\2.4: index.php

2006-09-02 Dean
 Edited text
  Web: downloads.php index.php
  Web\developer: index.php

2006-08-26 Tim
 PATCH: [ 1547117 ] Web: Remove Ads
  Web: page.inc
  Web\css: all.css print.css

2006-08-23 Tim
 PATCH: [ 1543687 ] Google AdSense setup
  Web: page.inc new file sitemap.txt
  Web\css: all.css
 PATCH: [ 1545436 ] Web: Move Firefox Ad
  Web: page.inc
  Web\css: print.css
  Web\images: removed valid-css.gif valid-html401.gif


2006-08-10 Tim
 PATCH: [ 1538297 ] Website changes for new stable release 2.4.10
  Web: downloads.php index.php page.inc WinMergePAD.xml
  Web\2.4: changes.txt index.php
 PATCH: [ 1536348 ] Known issue: some plugins need VB runtime
  Web\2.4: limitations.php
 Fix missing </div> for new tab layout.
  Web: page.inc

2006-08-05 Tim
 PATCH: [ 1534820 ] Web: Pimp my tabs ;)
  Web: page.inc
  Web\css: all.css
 BUG: [ 1534996 ] Web: WinCVS hints -page has outdated information
  Web: .htaccess page.inc
  Web\developer: removed wincvs.php

2006-07-31 Tim
 PATCH: [ 1531259 ] Web: Known limitation: In linefilters $ does not match EOL
  Web\2.4: limitations.php

2006-06-30 Tim
 Add 'Gal Hammer' to developers.
  Web\developer: developers.xml

2006-06-27 Tim