@@ -256,6 +256,7 @@
       </author>
     </authors>
     <versions>
+      <version>2.6</version>
       <version>2.4</version>
       <version>2.3</version>
       <version>2.2</version>
@@ -372,10 +373,11 @@
       <author>
         <name>Hans Eriksson</name>
         <email>hans dot ericson at bredband dot net</email>
-        <comment>2.5 - 2.1</comment>
+        <comment>2.6 - 2.1</comment>
       </author>
     </authors>
     <versions>
+      <version>2.6</version>
       <version>2.5</version>
       <version>2.4</version>
       <version>2.3</version>
